restricting-traffic/kube-system/allow-config-management-operator-egress.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-config-management-operator-egress
  namespace: kube-system
  annotations:
    #configmanagement.gke.io/cluster-selector: ${CLUSTER_SELECTOR}
spec:
  podSelector:  
   matchLabels:
      app: config-management-operator
  policyTypes:
  - Egress
  egress: 
  - to:
    - ipBlock:
        cidr: ${APISERVER_IP}/32
    ports:
    - protocol: TCP
      port: 443
