restricting-traffic/kube-system/allow-kubedns-autoscaler-egress.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-kube-dns-autoscaler-egress
  namespace: kube-system
  annotations:
    #configmanagement.gke.io/cluster-selector: ${CLUSTER_SELECTOR}
spec:
  podSelector:  
   matchLabels:
      k8s-app: kube-dns-autoscaler
  policyTypes:
  - Egress
  egress: 
  - to:
    - ipBlock:
        cidr: ${APISERVER_IP}/32
    ports:
    - protocol: TCP
      port: 443
