restricting-traffic/kube-system/allow-kubedns-from-all-egress.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-kubedns-from-all-egress
  namespace: kube-system
  annotations:
    #configmanagement.gke.io/cluster-selector: ${CLUSTER_SELECTOR}
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
    - to:
      - podSelector:
          matchLabels:
            k8s-app: kube-dns     
      ports:
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53
