restricting-traffic/kube-system/allow-kubedns-ingress.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-kube-dns-ingress
  namespace: kube-system
  annotations:
    #configmanagement.gke.io/cluster-selector: ${CLUSTER_SELECTOR}
spec:
  podSelector:  
   matchLabels:
      k8s-app: kube-dns
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: {}
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
