restricting-traffic/kube-system/allow-l7-default-backend-ingress.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-l7-default-backend-ingress
  namespace: kube-system
  annotations:
    #configmanagement.gke.io/cluster-selector: ${CLUSTER_SELECTOR}
spec:
  podSelector:  
    matchLabels:
      k8s-app: glbc
  policyTypes:
  - Ingress
  ingress:
  - from:
     - ipBlock:
        cidr: 35.191.0.0/16
     - ipBlock:
        cidr: 130.211.0.0/22
    ports:
    - protocol: TCP
      port: 8080
