restricting-traffic/kube-system/allow-metrics-server-egress.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-metrics-server-egress
  namespace: kube-system
  annotations:
    #configmanagement.gke.io/cluster-selector: ${CLUSTER_SELECTOR}
spec:
  podSelector: 
    matchLabels:
      k8s-app: metrics-server
  policyTypes:
  - Egress
  egress: 
  - to:
    - ipBlock:
        cidr: ${NODE_CIDR}
    ports:
    - protocol: TCP
      port: 10255
  - to:
    - ipBlock:
        cidr: ${APISERVER_IP}/32
    ports:
    - protocol: TCP
      port: 443
