restricting-traffic/kube-system/default-deny-all-egress.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all-egress
  namespace: kube-system
  annotations:
    #configmanagement.gke.io/cluster-selector: ${CLUSTER_SELECTOR}
spec:
  policyTypes:
  - Egress
  podSelector: {}
